  specify different form-single.@map values
- XML Actions iterate generates _index and _hasNext fields
- ArtifactFacade tracks artifact running time, keeps an hierarchical
  instead of flat history, and can print a tree of the history
- Added entity.@allow-user-field attribute to specify when UserField defs
  are considered, for security and performance reasons
- Added eeca.@get-original-value attribute to get the original (db) value
  if run on update or delete and before the entity operation

Bug Fixes:
- Fixed issue in ListCondition with null list entries, and improved the
  factory method with condition List parameter when List has only one
  condition to just use that condition
- Fixed issue in service input conversion treating empty values as nulls

===========================================================================
Release 1.3.1 - 20 Oct 2013
===========================================================================

Moqui Framework 1.3.1 is a minor new feature, bug fix, and performance
enhancement release.

New Features:

- Performance improvements based on profiling (tested screens run
  around 1.3 to 2 times as fast)
- form-list and section-iterate automatically add *_index and
  *_has_next context fields following the pattern used in Freemarker
- formDisplayOnly parameter (or context value) to make the form render as
  display-only (read-only)
- dynamic and static layouts
  - static layout uses entire browser width and is CSS based
  - dynamic layout uses jQuery Layout plugin and supports closing,
    resizing, fixed header/footer, separate scrolling left/right, etc
- popup menus are in the header to save space and for easier layout
- set action inside form field sub-elements and widget-template-include for
  parameterized widget-template definitions
- XML Form pass through of matches (regexp) validation from service
- Added ServiceTrigger entity to call a service when the record is created;